--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,22 @@
     <mat-icon>share</mat-icon>
   </button>
 
+  <div class="row gap-18">
+    <mat-form-field class="example-form-field">
+      <mat-label>New favorite item</mat-label>
+      <input matInput type="text" [(ngModel)]="newFavoriteContent">
+      @if (newFavoriteContent) {
+        <button matSuffix mat-icon-button aria-label="Clear" (click)="newFavoriteContent=''">
+          <mat-icon>close</mat-icon>
+        </button>
+      }
+    </mat-form-field>
+
+    <button mat-icon-button [disabled]="!newFavoriteContent" (click)="addFavoriteItem()">
+      <mat-icon>check</mat-icon>
+    </button>
+  </div>
+
   <mat-list>
     @if (favorites().length > 0) {
       @for (item of favorites(); track $index) {
