--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,33 +1,44 @@
 <router-outlet />
 
 <div class="content">
-  <button mat-mini-fab aria-label="Example icon button with a menu icon">
+  <button
+    mat-mini-fab
+    aria-label="Example icon button with a menu icon"
+    (click)="share()"
+  >
     <mat-icon>share</mat-icon>
   </button>
 
   <div class="row gap-18">
     <mat-form-field class="example-form-field">
       <mat-label>New favorite item</mat-label>
-      <input matInput type="text" [(ngModel)]="newFavoriteContent">
+      <input matInput type="text" [(ngModel)]="newFavoriteContent" />
       @if (newFavoriteContent) {
-        <button matSuffix mat-icon-button aria-label="Clear" (click)="newFavoriteContent=''">
-          <mat-icon>close</mat-icon>
-        </button>
+      <button
+        matSuffix
+        mat-icon-button
+        aria-label="Clear"
+        (click)="newFavoriteContent = ''"
+      >
+        <mat-icon>close</mat-icon>
+      </button>
       }
     </mat-form-field>
 
-    <button mat-icon-button [disabled]="!newFavoriteContent" (click)="addFavoriteItem()">
+    <button
+      mat-icon-button
+      [disabled]="!newFavoriteContent"
+      (click)="addFavoriteItem()"
+    >
       <mat-icon>check</mat-icon>
     </button>
   </div>
 
   <mat-list>
-    @if (favorites().length > 0) {
-      @for (item of favorites(); track $index) {
-        <mat-list-item>{{ item }}</mat-list-item>
-      }
-    } @else {
-      <mat-list-item>There is no favorites for now</mat-list-item>
+    @if (favorites().length > 0) { @for (item of favorites(); track $index) {
+    <mat-list-item>{{ item }}</mat-list-item>
+    } } @else {
+    <mat-list-item>There is no favorites for now</mat-list-item>
     }
   </mat-list>
 </div>
